Moving some files around, and now with css

--- a/frontend/templates/yo2.html
+++ b/frontend/templates/yo2.html
@@ -17,6 +17,8 @@
          https://unpkg.com/babel-standalone@6/babel.min.js -->
     <script src="{{ url_for('static', filename='babel.min.js') }}"></script>
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/yo2.css') }}">
+
   {% endblock %}
 </head>
 
